fixed picture clipping

--- a/port/src/style/home/_introduction.scss
+++ b/port/src/style/home/_introduction.scss
@@ -66,6 +66,7 @@
 }
 
 .ilyesPicture {
+    margin-top: 10vh;
     padding-top: 10vh;
     position: absolute;
     height: 90vh;
